# Lours

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  renovate.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yaml  check_changelog.yaml  coverage.yml  publish.yaml  release.yaml
docs/: .readthedocs.yaml  Makefile  changelog_old.md  cli.rst  conf.py  dataset.rst  evaluation.rst  index.rst  readme.md  tutorials.rst  utils.rst
docs/_static/: pypi.js  version_switcher.json
docs/_static/css/: custom.css
docs/_templates/autosummary/: class.rst  module.rst
docs/notebooks/: 1_demo_dataset.ipynb  2_demo_split.ipynb  3_demo_evaluation_detection.ipynb  4_demo_evaluation_crowd.ipynb  5_demo_fiftyone.ipynb  6_demo_schemas.ipynb  7_demo_booleanize.ipynb  remap.csv
libia/: __init__.py
libia/cli/: caipy_to_fiftyone.py
libia/dataset/: dataset.py  indexing.py  merge.py
libia/dataset/io/: caipy.py  coco.py  common.py  darknet.py  images_folder.py  parquet.py  pascalvoc.py
libia/dataset/io/schema_util/: default-schema.json  schema_util_functions.py
libia/dataset/remap_presets/: __init__.py  coco_to_pascalvoc.csv  coco_to_supercategory.csv
libia/dataset/split/: balanced_groups.py  disjoint_groups.py
libia/evaluation/: __init__.py  evaluator.py
libia/evaluation/detection/: crowd_detection_evaluator.py  detection_evaluator.py  detection_evaluator_base.py  util.py
libia/utils/: __init__.py  bbox_converter.py  dataframe_formatter.py  difftools.py  doc_utils.py  fiftyone_convert.py  grouper.py  label_map_merger.py  notebook_utils.py  parquet_saver.py  regression_testing.py  testing.py
lours/: __init__.py
lours/cli/: caipy_to_fiftyone.py
lours/dataset/: __init__.py  dataset.py  indexing.py  merge.py
lours/dataset/io/: caipy.py  coco.py  common.py  crowd_human.py  darknet.py  mot.py  parquet.py  pascalvoc.py
lours/dataset/io/schema_util/: __init__.py  schema_util_functions.py
lours/dataset/remap_presets/: __init__.py
lours/dataset/split/: balanced_groups.py  dataset_splitter.py  disjoint_groups.py
lours/evaluation/detection/: __init__.py  crowd_detection_evaluator.py  detection_evaluator.py  detection_evaluator_base.py  util.py
lours/utils/: __init__.py  annotations_appender.py  bbox_converter.py  column_booleanizer.py  difftools.py  doc_utils.py  fiftyone_convert.py  grouper.py  label_map_merger.py  parquet_saver.py  regression_testing.py  testing.py
test_libia/test_data/caipy_dataset/Annotations/train/: 000000000009.json
test_libia/test_data/caipy_dataset/Annotations/valid/: 000000000285.json
test_libia/test_data/coco_dataset/: annotations_empty.json  annotations_empty_no_labelmap.json  annotations_no_labelmap.json  annotations_valid.json  annotations_valid_random.json  histogram_annotations_valid.csv
test_libia/test_data/crowdhuman_dataset/: crowdhuman_train.odgt
test_libia/test_data/darknet_dataset/: ids_map.json  label_map.json  train.data  train.txt
test_libia/test_data/darknet_dataset/train/: 000000000034.txt
test_libia/test_data/pascalvoc_dataset/Annotations/: 2008_003874.xml  2009_000934.xml  2009_000939.xml
test_libia/test_data/yolov5_dataset/train/labels/: 000000000009.txt  000000000034.txt
test_libia/test_dataset/: test_class_remap.py  test_diff.py  test_io.py  test_iterator.py  test_merge.py  test_reindex.py  test_sampling.py  test_schema_util.py  test_tags.py
test_libia/test_dataset/test_split/: test_balanced_groups.py  test_disjoint_groups.py  test_split.py
test_libia/test_evaluation/: test_confusion_matrix.py  test_crowd.py  test_io.py  test_matches.py  test_pr.py
test_libia/test_utils/: test_annotation_appender.py  test_bbox_converter.py  test_booleanize.py  test_difftools.py  test_doc_utils.py  test_grouper.py  test_label_map.py  test_testing.py
test_libia/test_utils/test_testing/test_regression_with_images.d/: images.pq
test_lours/test_data/caipy_dataset/Annotations/train/: 000000000034.json
test_lours/test_data/caipy_dataset/Annotations/valid/: 000000000139.json
test_lours/test_data/caipy_dataset/tags/: custom_schema.json
test_lours/test_data/caipy_dataset/tags/custom_schema/: 785.json
test_lours/test_data/caipy_dataset/tags/default_schema/: 785.json
test_lours/test_data/caipy_dataset/tags/small_tagged_dataset/Annotations/: image1.json  image2.json
test_lours/test_data/coco_dataset/: annotations_keypoints.json  annotations_train.json  annotations_train_reindex.json  predictions_valid_random.json
test_lours/test_data/darknet_dataset/: classes.names  val.txt
test_lours/test_data/darknet_dataset/train/: 000000000009.txt
test_lours/test_data/darknet_dataset/valid/: 000000000139.txt  000000000285.txt
test_lours/test_data/mot_dataset/: gt.txt
test_lours/test_data/pascalvoc_dataset/Annotations/: 2009_000935.xml  2009_000937.xml  2009_000938.xml
test_lours/test_data/pascalvoc_dataset/ImageSets/Main/: train.txt  trainval.txt  val.txt
test_lours/test_data/remap_dataset/: remap.csv
test_lours/test_data/yolov5_dataset/: yolov5.yaml
test_lours/test_data/yolov5_dataset/valid/labels/: 000000000139.txt  000000000285.txt
test_lours/test_dataset/: test_class_remap.py  test_constructor.py  test_diff.py  test_io.py  test_iterator.py  test_merge.py  test_reindex.py  test_sampling.py  test_schema_util.py  test_tags.py
test_lours/test_dataset/test_split/: test_balanced_groups.py  test_disjoint_groups.py  test_split.py
test_lours/test_evaluation/: test_confusion_matrix.py  test_crowd.py  test_io.py  test_matches.py  test_pr.py
test_lours/test_utils/: test_annotation_appender.py  test_bbox_converter.py  test_booleanize.py  test_difftools.py  test_doc_utils.py  test_grouper.py  test_label_map.py  test_testing.py
test_lours/test_utils/test_doc_utils/: test_column_specs.csv
test_lours/test_utils/test_testing/test_regression.d/: images.pq  metadata.yaml
test_lours/test_utils/test_testing/test_regression_with_images.d/: annotations.pq  metadata.yaml
