[tool.poetry]
name = "lours"
version = "0.1.0"
description = ""
authors = ["Lilian Glaudin <lilian.glaudin@xxii.fr>",
           "Clément Pinard <mail@clementpinard.fr>",
           "Quoc Cuong LE <quoccuong.le@xxii.fr>",
           "Nacer Kaci <nacer.kaci@xxii.fr>",
           "Bastien Botrel <bastien.botrel@xxii.fr>"]
packages = [
    {include = "lours"}
]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
caipy_to_fiftyone = "lours.cli.caipy_to_fiftyone:run"
c2f = "lours.cli.caipy_to_fiftyone:run"

[tool.poetry.plugins."pytest11"]
dataset_regressions = "lours.utils.regression_testing"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
tqdm = "^4.64"
PyYAML = "^6.0.1"
imageio = "^2.31.3"
imagesize = "^1.4.1"
POT = "^0.9.1"
jsonschema-rs = "^0.16.3"
scikit-learn = "^1.3.0"
typing-extensions = "^4.7.1"
watchdog = "^3.0.0"
toml = "^0.10.2"
shortuuid = "^1.0.11"
faker = "^22.6.0"
fiftyone = "^0.23"
# MongoDB is not easy to get on ubuntu22.04
# See https://docs.voxel51.com/getting_started/troubleshooting.html#alternative-linux-builds
# See also https://github.com/voxel51/fiftyone/issues/3236 to keep track of the utility
# of this workaround package in the future
fiftyone-db-ubuntu2204 = { version = "^0.4.0", platform = "linux" }

# Pinning boto3 is needed because of fiftyone's dependencies
# because Boto3/botocore has way too much different versions.
# Since fiftyone declared its dependence on but with any version ("*"), the dependency
# resolving takes forever because it tries every single boto3 version.
# See similar problem with awscli : https://github.com/python-poetry/poetry/issues/1173
# See related issue on fiftyone :
# https://github.com/voxel51/fiftyone/issues/3145
boto3 = "1.26.83"
xmltodict = "^0.13.0"
pytest-regressions = "^2.5.0"
# Pinning numpy version to be <1 is needed as numpy 2.0 is incompatible with some
# librairies and they did not constrain the numpy version
# See https://numpy.org/devdocs/dev/depending_on_numpy.html#numpy-2-abi-handling
numpy = "^1"
scipy= ">=1, <1.14"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pycocotools = "^2.0.7"
pre-commit = "^3.4.0"
coverage = "^7.3.1"
pandas-stubs = "^2.1.4.231227"
pytest-sugar = "^0.9.7"
ipykernel = "^6.29.0"
ipywidgets = "^8.0.3"

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.5"
pydata-sphinx-theme = "^0.15.2"
myst-parser = "^2.0.0"
jupyter = "^1.0.0"
seaborn = "^0.13.0"
nbsphinx = "^0.9.3"
sphinx-copybutton = "^0.5.2"
sphinx-autobuild = "^2021.3.14"
ipython = "^8.15.0"
sphinx-favicon = "^1.0.1"
sphinx-argparse = "^0.4.0"
mercury = "^2.3.10"


[tool.poetry.extras]
fiftyone = ["fiftyone", "boto3"]
plot-utils = ["matplotlib"]
regression = ["pytest-regressions"]

[tool.pydoclint]
style = 'google'
arg-type-hints-in-docstring = false
skip-checking-raises = true
allow-init-docstring = true
check-return-types = false
check-yield-types = false

[tool.pytest.ini_options]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
addopts = "--import-mode=importlib --doctest-modules"
testpaths = ["test_lours", "lours"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
